# bci-mcp

./: .dockerignore  .gitignore  .mcp.json  404.html  AGENTS.md  CHANGELOG.md  CITATION.cff  CLAUDE.md  CNAME  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  SECURITY.md  docker-compose.yml  glama.json  hooks.py  index.html  llms.txt  manufact.toml  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  server.json  sitemap.xml
.cursor/rules/: git-commits.mdc
.githooks/: prepare-commit-msg
.github/workflows/: ci.yml  deploy-docs.yml  deploy-pages.yml  docs.yml  publish.yml
api/bci-module/: index.html
api/mcp-module/: index.html
changelog/: index.html
contributing/: index.html
docs/: changelog.md  contributing.md  github-topics.md  index.md  test.md
docs-static/: README.md  index.html  styles.css
docs/api/: bci-module.md  mcp-module.md
docs/features/: bci-features.md  mcp-integration.md  signal-processing.md
docs/getting-started/: configuration.md  installation.md  quick-start.md
examples/: README.md  claude_desktop_config.json  mcp_quickstart.py  record_and_analyze.py
features/bci-features/: index.html
features/mcp-integration/: index.html
npm/bci-mcp/: README.md  bin.js  (+1 more)
scripts/: install-mcp.sh  manufact-start.sh
search/: search_index.json
src/: __init__.py  main.py  server.py
test/: index.html
tests/: test_bands.py  test_brainflow_device.py  test_calibration.py  test_cli.py  test_cli_record.py  test_confidence.py  test_dashboard.py  test_device.py  test_discovery.py  test_examples.py  test_examples_compile.py  test_filters.py  test_limitations.py  test_lsl_device.py  test_lsl_publisher.py  test_mcp_auth.py  test_mcp_security.py  test_mcp_service.py  test_metadata.py  test_metrics.py  test_neurofeedback.py  test_neurofocus_device.py  test_neurofocus_protocol.py  test_packaging.py  test_pipeline.py  test_playback.py  test_quality.py  test_readme.py  test_recording.py  test_recording_paths.py  test_registry.py  test_ringbuffer.py  test_serial_device.py  test_smoke.py  test_state.py  test_stream.py  test_synthetic.py
(+47 files in other folders)
